SERVER-12349: don't replace _id Timestamp, but replace all toplevel Timestamp(0,0) - like insert